RESOLVED FIXED120683
[Qt][WK1] REGRESSION(r154988): compositing/video/video-with-invalid-source.html fails
https://bugs.webkit.org/show_bug.cgi?id=120683
Summary [Qt][WK1] REGRESSION(r154988): compositing/video/video-with-invalid-source.ht...
Zoltan Arvai
Reported 2013-09-04 08:24:25 PDT
After http://trac.webkit.org/changeset/154988 test fails with timeout. --- /ramdisk/qt-linux-32-release-NRWT/build/layout-test-results/compositing/video/video-with-invalid-source-expected.txt +++ /ramdisk/qt-linux-32-release-NRWT/build/layout-test-results/compositing/video/video-with-invalid-source-actual.txt @@ -1 +1,2 @@ -PASS +FAIL: Timed out waiting for notifyDone to be called +
Attachments
Patch (7.39 KB, patch)
2013-09-04 17:15 PDT, Andre Moreira Magalhaes
no flags
Logs LayoutTests/media and LayoutTests/http/tests/media/ against master (105.73 KB, text/plain)
2013-09-04 17:17 PDT, Andre Moreira Magalhaes
no flags
Logs LayoutTests/media and LayoutTests/http/tests/media/ against master + changeset reverted (92.99 KB, text/plain)
2013-09-04 17:19 PDT, Andre Moreira Magalhaes
no flags
Logs LayoutTests/media and LayoutTests/http/tests/media/ against master + proposed patch (87.42 KB, text/plain)
2013-09-04 17:21 PDT, Andre Moreira Magalhaes
no flags
Zoltan Arvai
Comment 1 2013-09-04 08:38:32 PDT
Andre Moreira Magalhaes
Comment 2 2013-09-04 17:15:22 PDT
Created attachment 210507 [details] Patch Patch that should fix this regression and other media regressions on the same changeset.
Andre Moreira Magalhaes
Comment 3 2013-09-04 17:17:46 PDT
Created attachment 210511 [details] Logs LayoutTests/media and LayoutTests/http/tests/media/ against master run-webkit-tests logs for LayoutTests/media and LayoutTests/http/tests/media/ against master (93de7e).
Andre Moreira Magalhaes
Comment 4 2013-09-04 17:19:54 PDT
Created attachment 210516 [details] Logs LayoutTests/media and LayoutTests/http/tests/media/ against master + changeset reverted run-webkit-tests logs for LayoutTests/media and LayoutTests/http/tests/media/ against master (93de7e) + changeset r154988 (git commit 6ebd5a) reverted.
Andre Moreira Magalhaes
Comment 5 2013-09-04 17:21:14 PDT
Created attachment 210520 [details] Logs LayoutTests/media and LayoutTests/http/tests/media/ against master + proposed patch run-webkit-tests logs for LayoutTests/media and LayoutTests/http/tests/media/ against master (93de7e) + proposed patch from comment #2.
Andre Moreira Magalhaes
Comment 6 2013-09-04 17:23:53 PDT
Looks like test media/video-aspect-ratio.html should be marked as flaky, it works and fails randomly (sometimes with timeout, sometimes with failure).
WebKit Commit Bot
Comment 7 2013-09-05 00:32:38 PDT
Comment on attachment 210507 [details] Patch Clearing flags on attachment: 210507 Committed r155104: <http://trac.webkit.org/changeset/155104>
WebKit Commit Bot
Comment 8 2013-09-05 00:32:41 PDT
All reviewed patches have been landed. Closing bug.
Zoltan Arvai
Comment 9 2013-09-05 05:34:48 PDT
Unskipped in http://trac.webkit.org/changeset/155110. Thanks for the fix.
Note You need to log in before you can comment on or make changes to this bug.